# api/server/swagger_server/models/__init__.py
@@ -4,7 +4,10 @@
 from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.author import Author
+from swagger_server.models.error import Error
 from swagger_server.models.inline_response200 import InlineResponse200
 from swagger_server.models.paging_info import PagingInfo
 from swagger_server.models.paper import Paper
+from swagger_server.models.paper_sort_by import PaperSortBy
 from swagger_server.models.reviewing_service_description import ReviewingServiceDescription
+from swagger_server.models.sort_order import SortOrder
